# llm-youtube-transcript

./: README.md  llm_youtube_transcript.py  pyproject.toml
.github/workflows/: publish.yaml  test.yaml
tests/: test_llm_youtube_transcript.py
