[project]
name = "llm-youtube-transcript"
version = "0.1"
description = "Plugin for LLM that adds support for fetching transcripts from YouTube videos using Supadata API"
readme = "README.md"
authors = [{name = "Saeed Esmaili"}]
license = {text = "Apache-2.0"}
classifiers = []
dependencies = [
    "llm>=0.24",
    "httpx"
]
requires-python = ">=3.9"

[project.entry-points.llm]
youtube_transcript = "llm_youtube_transcript" 

[project.optional-dependencies]
test = ["pytest", "pytest-httpx"]